# eeg-daniel

./: pyproject.toml
src/: csv_line.py  plot_sfa.py
